--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="survis.js"></script>
+    <script src="properties.js"></script>
     <script src="config.js"></script>
 </body>
 </html>
